# knowit

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-publish.yml  publish.yml  test.yml
knowit/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  defaults.yml  properties.py  property.py  provider.py  rule.py  rules.py  serializer.py  units.py  utils.py
knowit/properties/: __init__.py  audio.py  basic.py  duration.py  general.py  language.py  property.py  quantity.py  video.py  yesno.py
knowit/properties/audio/: __init__.py  bitratemode.py  channels.py  codec.py  compression.py  profile.py
knowit/properties/subtitle/: __init__.py  encoding.py  format.py
knowit/properties/video/: __init__.py  codec.py  dimensions.py  encoder.py  hdr.py  profile.py  ratio.py  scantype.py
knowit/providers/: __init__.py  enzyme.py  ffmpeg.py  mediainfo.py  mkvmerge.py  provider.py
knowit/rules/: __init__.py  alternative.py  audio.py  general.py  language.py  rule.py
knowit/rules/audio/: __init__.py  atmos.py  channels.py  codec.py  dtshd.py  profile.py
knowit/rules/subtitle/: __init__.py  closedcaption.py  hearingimpaired.py
knowit/rules/video/: __init__.py  resolution.py
scripts/: test.sh
tests/: __init__.py  conftest.py  test_audiochannels.py  test_audiochannels.yml  test_enzyme.py  test_ffmpeg.py  test_mediainfo.py  test_mkvmerge.py  test_properties.py  test_properties.yml  test_provider.py  test_resolution.py  test_resolution.yml  test_serializer.py  test_units.py  test_utils.py  test_video_profile.py
tests/data/enzyme/: 7.1-dts-hd-ma-speaker-mapping-test-file.mkv.json  7.1-dts-hd-ma-speaker-mapping-test-file.mkv.yml  issue-24-example-01.mkv.json  issue-24-example-01.mkv.yml  test1.mkv.yml  test2.mkv.yml  test3.mkv.yml  test5.mkv.yml  test6.mkv.yml  test7.mkv.yml  test8.mkv.yml
tests/data/ffmpeg/: 7.1-dts-hd-ma-speaker-mapping-test-file.mkv.json  7.1-dts-hd-ma-speaker-mapping-test-file.mkv.yml  issue-39-example-01.mkv.json  issue-39-example-01.mkv.yml  issue-39-example-02.mkv.json  issue-39-example-02.mkv.yml  media_001.mkv.json  media_001.mkv.yml  test1.mkv.yml  test2.mkv.yml  test3.mkv.yml  test4.mkv.yml  test5-ffmpeg-v2.8.15.mkv.json  test5-ffmpeg-v2.8.15.mkv.yml  test5.mkv.yml  test6.mkv.yml  test7.mkv.yml  test8.mkv.yml
tests/data/mediainfo/: 7.1-dts-hd-ma-speaker-mapping-test-file.mkv.json  7.1-dts-hd-ma-speaker-mapping-test-file.mkv.xml  7.1-dts-hd-ma-speaker-mapping-test-file.mkv.yml  media_001.mkv.json  media_001.mkv.yml  several-tracks.mkv.json  several-tracks.mkv.yml  test1.mkv.yml  test2.mkv.yml  test3.mkv.yml  test4.mkv.yml  test5.mkv.yml  test6.mkv.yml  test7.mkv.yml  test8.mkv.yml
tests/data/mkvmerge/: media_001.mkv.json  media_001.mkv.yml  test1.mkv.yml  test2.mkv.yml  test3.mkv.yml  test4.mkv.yml  test5.mkv.yml  test6.mkv.yml  test7.mkv.yml  test8.mkv.yml
tests/enzyme/: test_001.yml  test_002.yml
tests/mediainfo/: test_001.yml
tests/test_enzyme/: test_001.yml  test_002.yml
tests/test_ffmpeg/: test_001.yml
tests/test_mediainfo/: test_001.yml
