[tool.poetry]
name = "knowit"
version = "0.5.2"
description = "Know better your media files"
authors = [
    "Rato",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/knowit"
homepage = "https://github.com/ratoaq2/knowit"
keywords = [
    "video",
    "mkv",
    "mp4",
    "mediainfo",
    "metadata",
    "movie",
    "episode",
    "tv",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
knowit = "knowit.__main__:main"

[tool.poetry.dependencies]
python = "^3.8.1"
babelfish = "^0.6.0"
enzyme = "^0.4.1"
pint = ">=0.20.1,<0.22.0"
pymediainfo = "^6.0.1"
pyyaml = "^6.0"
trakit = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"
flake8 = ">=6,<8"
requests = "^2.28.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
pep8-naming = ">=0.13.3,<0.15.0"
pydocstyle = "^6.1.1"
mypy = "^1.1.1"
types-requests = "^2.28.11.8"
types-mock = "^5.0.0.2"
typing-extensions = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
