[tool.poetry]
name = "knowit"
version = "0.5.8"
description = "Know better your media files"
authors = [
    "Rato",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ratoaq2/knowit"
keywords = [
    "video",
    "mkv",
    "mp4",
    "mediainfo",
    "metadata",
    "movie",
    "episode",
    "tv",
    "shows",
    "series",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]
include = [
    { path = "scripts/**", format = "sdist" },
    { path = "tests/**", format = "sdist" },
    { path = "setup.cfg", format = "sdist" },
]

[tool.poetry.scripts]
knowit = "knowit.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
babelfish = "^0.6.1"
enzyme = "^0.5.2"
pint = { version = ">=0.20.1,<0.25.0", optional = true }
pymediainfo = "^7.0.1"
pyyaml = "^6.0"
trakit = "^0.2.2"
platformdirs = "^4.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"
requests = "^2.32.4"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.2"
pep8-naming = "^0.15.1"
pydocstyle = "^6.3.0"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
types-mock = "^5.2.0.20250516"
typing-extensions = "^4.14.1"

[tool.poetry.extras]
pint = ["pint"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
