[metadata]
name = knowit
version = attr: knowit.__version__
description = Know your media files better
long_description = file: README.rst
author = Rato AQ2
author_email = rato.aq2@gmail.com
url = https://github.com/ratoaq2/knowit
license = MIT
keywords =
    episode
    mediainfo
    metadata
    mkv
    mp4
    movie
    series
    shows
    tv
    video
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Video

[options]
include_package_data = True
packages = find:
install_requires =
    babelfish >= 0.5.5 ; python_version < "3.10"
    babelfish >= 0.5.6 ; python_version >= "3.10"
    enzyme >= 0.4.1
    pint >= 0.9
    pymediainfo >= 3.0
    PyYAML >= 3.13
    six >= 1.12.0

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    knowit = knowit.__main__:main

[flake8]
import-order-style = cryptography
application-import-names = knowit
max-line-length = 120
ignore =
    # D100 Missing docstring in public module
    D100
    # D103 Missing docstring in public function
    D103
    # I201 Missing newline between import groups
    I201
per-file-ignores =
    __init__.py:
        # D104 Missing docstring in public package
        D104
        # F401 Imported but unused
        F401
    knowit/__init__.py:
        # E402 Module level import not at top of file
        E402
        # F401 Imported but unused
        F401

[mypy]

[mypy-pint.*]
ignore_missing_imports = True

[mypy-babelfish.*]
ignore_missing_imports = True

[mypy-enzyme.*]
ignore_missing_imports = True

[mypy-pymediainfo.*]
ignore_missing_imports = True
